# what-to-code-cli

./: Cargo.toml  Makefile  README.md
src/: main.rs
