[package]
name = "what-to-code-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
minreq = { version = "2.6.0", features = ["https-rustls-probe", "json-using-serde"] }
colored = "2.0.0"